k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ayaztrade-api-service
  namespace: ayaztrade
  labels:
    app: ayaztrade-api
spec:
  selector:
    app: ayaztrade-api
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  type: ClusterIP
